--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,14 +5,18 @@ html, body {
 }
 
 body {
-    background-color: #37E990;
+    background-color: #97EAF4;
     color: #000;
 }
 
 .title {
     width: 100%;
     height: 200px;
-    font-size: 83px;
+    font-size: 150px;
+    text-align: center;
+}
+
+.logo {
     text-align: center;
 }
 
@@ -24,20 +28,30 @@ body {
     bottom: 40px;
 }
 
-a {
+a:not(.answer-box) {
     margin: 0 auto;
     padding: 3px;
     width: 100%;
     font-size: 30px;
     text-align: center;
     text-decoration: none;
-    color: white;
+    color: black;
     display: block;
-    background-color: #000;
+    background-color: #06C2F4;
+}
+
+hr{
+	background-color: transparent;
+	height: 0;
+	border: none;
+	border-bottom: 1px solid rgba(255,255,255,0.08);
+	border-top: 1px solid #007996;
+	margin: 0;
+	clear: both;
 }
 
 a:hover {
-    background-color: #8B8B8B
+    background-color: #007996
 }
 @font-face {
     font-family: defaultFont;
