--- a/styles/questions.css
+++ b/styles/questions.css
@@ -13,51 +13,51 @@ div {
     background-color: white;
     height: 200px;
     width: 75%;
-    font-size: 25px;
+    font-size: 65px;
     margin-bottom: 15px;
-    padding: 10px;
+    padding: 140px 0px 0px;
 }
 .answerbox1 {
     float:left;
-    margin-left: 450px;
+    margin-left: 350px;
     text-align: center;
     border: 5px solid black;
     background-color: white;
     height: 50px;
-    width: 150px;
+    width: 250px;
     padding-top: 15px;
 }
 .answerbox2 {
     float: right;
-    margin-right: 450px;
+    margin-right: 350px;
     text-align: center;
     border: 5px solid black;
     background-color: white;
     height: 50px;
-    width: 150px;
+    width: 250px;
     padding-top: 15px;
 }
 .answerbox3 {
     clear: right;
     float: left;
     margin-top: 20px;
-    margin-left: 450px;
+    margin-left: 350px;
     text-align: center;
     border: 5px solid black;
     background-color: white;
     height: 50px;
-    width: 150px;
+    width: 250px;
     padding-top: 15px;
 }
 .answerbox4 {
     float: right;
     margin-top: 20px;
-    margin-right: 450px;
+    margin-right: 350px;
     text-align: center;
     border: 5px solid black;
     background-color: white;
     height: 50px;
-    width: 150px;
+    width: 250px;
     padding-top: 15px;
 }
 .player_stats {
