--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,23 @@ body {
     text-align: center;
 }
 
+.logo-pic:hover {
+    animation: spin 5s linear infinite;
+}
+
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+}
+
 .potatoest {
     position: fixed;
     text-align: center;
