--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,28 @@ body {
 
 .logo {
     text-align: center;
+    height: 50%;
+}
+
+.logo-pic {
+    width: 30%;
+}
+
+.logo-pic:hover {
+    animation: spin 5s linear infinite;
+}
+
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
 }
 
 .logo-pic:hover {
